# evidence_vault

./: ADVANCED_FEATURES.md  API_REFERENCE.md  DOCS_INDEX.md  IMPLEMENTATION_SUMMARY.md  MOBILE_APP_GUIDE.md  README_FEATURES.md  SETUP_GUIDE.md  TESSERACT_SETUP.md  app.py  chain_ledger.json  evidence.db  requirements.txt
evidence-service/: .env.example  README.md  pyproject.toml  requirements.txt
evidence-service/migrations/: init_sqlite.sql
evidence-service/src/: app.py
evidence-service/src/api/: __init__.py
evidence-service/src/api/v1/: analytics.py  bots.py  realtime.py  routes.py  webhooks.py
evidence-service/src/audit/: logger.py
evidence-service/src/core/: config.py  security.py
evidence-service/src/db/: base.py  models.py
evidence-service/src/services/: analytics.py  bots.py  encryption.py  storage.py
evidence-service/src/tasks/: worker.py
evidence-service/src/types/: schemas.py
evidence-service/tests/: test_audit.py  test_encryption.py  test_upload.py
evidence_vault/api/: routes.py
evidence_vault/core/: config.py
evidence_vault/db/: session.py
evidence_vault/services/: background.py  encryption.py
extension/: background.js  content.js  generate_icon.py  highlight.css  manifest.json
static/: script.js  style.css
templates/: admin_center.html  detail.html  emergency.html  index.html  info.html  judge_mode.html  legal.html  login.html  timeline.html  vault.html  verify.html
