[tool.poetry]
name = "evidence-service"
version = "0.1.0"
description = "A service for managing evidence files with encryption and auditing capabilities."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0"
cryptography = "^3.4"
sqlite = "^3.36"
redis = "^4.0"
rq = "^1.10"
celery = "^5.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-cov = "^2.12"
black = "^21.7b0"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"